feat: social logins

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ opencv-contrib-python==4.5.5.62
 django-colorfield==0.6.3
 gevent==21.12.0
 redis==4.1.4
+django-allauth==0.49.0
+dj-rest-auth==2.2.3
