--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ psycopg2-binary==2.9.3
 gunicorn==20.1.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
+django-cors-headers==3.11.0
 pillow==9.0.1
 django-filter==21.1
 aiohttp~=3.8.1
