--- a/.env
+++ b/.env
@@ -6,13 +6,13 @@ QARYB_DB_USER="ljzxbltkkdtapz"
 NOMINATIM_PROTOCOL="http"
 MAP_DOMAIN="141.95.139.24"
 # LOCAL
-CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
-CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
-API_URL=http://127.0.0.1:8000
-SOCIAL_ERROR_FILE_PATH='/Users/youness/Desktop/Qaryb_API_new/test.txt'
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+#CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
+#CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
+#API_URL=http://127.0.0.1:8000
+#SOCIAL_ERROR_FILE_PATH='/Users/youness/Desktop/Qaryb_API_new/test.txt'
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
 # SERVER
-#CELERY_BROKER_URL="redis://127.0.0.1:6379/1"
-#CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/1"
-#API_URL='https://api2.qaryb.com'
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+CELERY_BROKER_URL="redis://127.0.0.1:6379/1"
+CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/1"
+API_URL='https://api2.qaryb.com'
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
