--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Django==4.0.2
+Django==4.0.3
 python-decouple==3.6
 psycopg2-binary==2.9.3
 gunicorn==20.1.0
 djangorestframework==3.13.1
-djangorestframework-simplejwt==5.0.0
+djangorestframework-simplejwt==5.1.0
 django-cors-headers==3.11.0
+django-colorfield==0.6.3
 pillow==9.0.1
 django-filter==21.1
 aiohttp~=3.8.1
