--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-decouple==3.6
 psycopg2-binary==2.9.3
 gunicorn==20.1.0
 djangorestframework==3.13.1
+# Error if updated
 djangorestframework-simplejwt==5.0.0
 django-cors-headers==3.11.0
 django-colorfield==0.6.3
