--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,20 @@ django-cors-headers==3.11.0
 django-colorfield==0.6.3
 pillow==9.0.1
 django-filter==21.1
-aiohttp~=3.8.1
+aiohttp==3.8.1
 celery==5.2.3
 opencv-python==4.5.5.64
 opencv-contrib-python==4.5.5.64
 gevent==21.12.0
-redis==4.1.4
 django-allauth==0.49.0
 dj-rest-auth==2.2.3
-six~=1.16.0
-requests~=2.27.1
-beautifulsoup4~=4.10.0
-channels~=3.0.4
-PyJWT~=2.3.0
+six==1.16.0
+requests==2.27.1
+beautifulsoup4==4.10.0
+redis==4.1.4
+websockets==10.2
+channels==3.0.4
+daphne==3.0.2
+channels-redis==3.4.0
+PyJWT==2.3.0
+asgiref==3.5.0
