--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@ NOMINATIM_PROTOCOL="http"
 MAP_DOMAIN="141.95.139.24"
 REDIS_HOST="127.0.0.1"
 REDIS_PORT="6379"
+FACEBOOK_CLIENT_ID="701041004404458"
+FACEBOOK_SECRET="6892529099e635e5e74a31ea2f8cc00a"
+GOOGLE_CLIENT_ID="258566616875-3tja0a0j92vd5obg3d9i5ku8veqi18rm.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
 # LOCAL
 #CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 #CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
