--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel==0.37.1
-Django==4.0.3
+Django==4.0.4
 python-decouple==3.6
 psycopg2-binary==2.9.3
 gunicorn==20.1.0
@@ -7,10 +7,10 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 django-cors-headers==3.11.0
 django-colorfield==0.6.3
-pillow==9.0.1
+Pillow==9.1.0
 django-filter==21.1
 aiohttp==3.8.1
-celery==5.2.3
+celery==5.2.6
 opencv-python==4.5.5.64
 opencv-contrib-python==4.5.5.64
 gevent==21.12.0
@@ -18,12 +18,13 @@ django-allauth==0.50.0
 dj-rest-auth==2.2.4
 six==1.16.0
 requests==2.27.1
-beautifulsoup4==4.10.0
-redis==4.2.0
-websockets==10.2
+beautifulsoup4==4.11.1
+redis==4.2.2
+websockets==10.3
 channels==3.0.4
 daphne==3.0.2
 channels-redis==3.4.0
 PyJWT==2.3.0
 asgiref==3.5.0
 drf_yasg==1.20.0
+qrcode==7.3.1
