fix: gitignore added logs

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,16 @@ __pycache__/
 venv/
 media/
 logs/
+logs/debug.log
+logs/ws_debug.log
 tests/
 account/migrations
-chat/migrations
-temp_shop/migrations
 auth_shop/migrations
-temp_offer/migrations
-offer/migrations
 cart/migrations
+chat/migrations
+offer/migrations
 order/migrations
-ratings/migrations
 places/migrations
+ratings/migrations
+temp_offer/migrations
+temp_shop/migrations
