fix: gitignore /__pycache__

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,22 @@ logs/debug.log
 logs/ws_debug.log
 tests/
 account/migrations
+account/__pycache__
 auth_shop/migrations
+auth_shop/__pycache__
 cart/migrations
+cart/__pycache__
 chat/migrations
+chat/__pycache__
 offer/migrations
+offer/__pycache__
 order/migrations
+order/__pycache__
 places/migrations
+places/__pycache__
 ratings/migrations
+ratings/__pycache__
 temp_offer/migrations
+temp_offer/__pycache__
 temp_shop/migrations
+temp_shop/__pycache__
