--- a/.gitignore
+++ b/.gitignore
@@ -9,23 +9,33 @@ logs/
 logs/debug.log
 logs/ws_debug.log
 tests/
+account/base/__pycache__
 account/migrations
 account/__pycache__
+auth_shop/base/__pycache__
 auth_shop/migrations
 auth_shop/__pycache__
+cart/base/__pycache__
 cart/migrations
 cart/__pycache__
+chat/base/__pycache__
 chat/migrations
 chat/__pycache__
+offer/base/__pycache__
 offer/migrations
 offer/__pycache__
+order/base/__pycache__
 order/migrations
 order/__pycache__
+places/base/__pycache__
 places/migrations
 places/__pycache__
+ratings/base/__pycache__
 ratings/migrations
 ratings/__pycache__
+temp_offer/base/__pycache__
 temp_offer/migrations
 temp_offer/__pycache__
+temp_shop/base/__pycache__
 temp_shop/migrations
 temp_shop/__pycache__
