--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ logs/
 logs/debug.log
 logs/ws_debug.log
 tests/
+Qaryb_API_new/__pycache__
 account/base/__pycache__
 account/migrations
 account/__pycache__
