feat: Added requirements arabic text libraries, updated asgref, updated pillow, overrided actions for outstanding tokens admin, generated arabic qr code

--- a/.env
+++ b/.env
@@ -132,6 +132,7 @@ ACCOUNT_USERNAME_REQUIRED=False
 ACCOUNT_AUTHENTICATION_METHOD="email"
 ACCOUNT_EMAIL_REQUIRED=True
 ACCOUNT_EMAIL_VERIFICATION="none"
+ACCOUNT_MAX_EMAIL_ADDRESSES=1
 
 # SWAGGER_SETTINGS config
 SECURITY_DEFINITIONS_BASIC_TYPE="basic"
