--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ gunicorn==20.1.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 django-cors-headers==3.12.0
-django-colorfield==0.6.3
-Pillow==9.1.0
+django-colorfield==0.7.0
+Pillow==9.1.1
 django-filter==21.1
 aiohttp==3.8.1
 celery==5.2.6
@@ -23,8 +23,9 @@ websockets==10.3
 channels==3.0.4
 daphne==3.0.2
 channels-redis==3.4.0
-PyJWT==2.3.0
-asgiref==3.5.1
+PyJWT==2.4.0
+asgiref==3.5.2
 drf_yasg==1.20.0
 qrcode==7.3.1
-pycld3==0.22
+arabic-reshaper==2.1.3
+python-bidi==0.4.2
