feat: delete store, mode vacance periodic task + in chat, Added version app includes maintenance, management script for insert_version, chore: refactoring for customUser views

--- a/.env
+++ b/.env
@@ -110,7 +110,7 @@ MESSAGES_TO_LOAD=15
 FACEBOOK_METHOD="oauth2"
 FACEBOOK_AUTH_TYPE="reauthenticate"
 FACEBOOK_LOCALE_FUNC="en_US"
-FACEBOOK_COOKIE=False
+FACEBOOK_COOKIE=True
 FACEBOOK_EXCHANGE_TOKEN=True
 FACEBOOK_VERIFIED_EMAIL=True
 FACEBOOK_VERSION="v13.0"
