--- a/.env
+++ b/.env
@@ -87,6 +87,8 @@ MAP_DOMAIN="141.95.139.24"
 # Simple_jwt config
 ACCESS_TOKEN_LIFETIME=60
 REFRESH_TOKEN_LIFETIME=365
+BLACKLIST_AFTER_ROTATION=True
+ROTATE_REFRESH_TOKENS=True
 
 # Redis config
 REDIS_HOST="127.0.0.1"
