feat: register endpoint add/alter output fields tokens - feat: base urls has 1.0.0 version - feat: Alter CustomUser Model added task_id_activation & task_id_password_reset fields - feat: Alter Account tasks added base_start_deleting_expired_codes (eta shift task) - feat: Alter Resend activation code added revoke 24h previous periodic task (default activation) - feat some package upgrades

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Basic config
 SECRET_KEY="ac@k!7n8s#f(dbbv92(ya_!68%tvi=x&o*k5fp72qt+vkua0=f"
 DEBUG=True
-API_IP="141.95.241.190"
+API_IP="127.0.0.1"
 API_DOMAIN="api2.qaryb.com"
 
 # SSL secure proxy config
@@ -82,7 +82,7 @@ LOGGING_LOGGERS_PROPAGATE=True
 
 # Nominatim & map config
 NOMINATIM_PROTOCOL="http"
-MAP_DOMAIN="141.95.139.24"
+MAP_DOMAIN="127.0.0.1"
 
 # Simple_jwt config
 ACCESS_TOKEN_LIFETIME=60
@@ -145,12 +145,12 @@ SWAGGER_LOGIN_URL="/admin/login/"
 SWAGGER_LOGOUT_URL="/admin/logout/"
 
 # LOCAL
-#CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
-#CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
-#API_URL=http://127.0.0.1:8000
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
+CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
+API_URL=http://127.0.0.1:8000
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
 # SERVER
-CELERY_BROKER_URL="redis://127.0.0.1:6379/1"
-CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/1"
-API_URL='https://api2.qaryb.com'
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+#CELERY_BROKER_URL="redis://127.0.0.1:6379/1"
+#CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/1"
+#API_URL='https://api2.qaryb.com'
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
