--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,32 @@
-Django==4.0.5
+Django==4.0.6
 python-decouple==3.6
 psycopg2-binary==2.9.3
 gunicorn==20.1.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 django-cors-headers==3.13.0
-django-colorfield==0.7.0
-Pillow==9.1.1
-django-filter==21.1
+django-colorfield==0.7.1
+Pillow==9.2.0
+django-filter==22.1
 aiohttp==3.8.1
 celery==5.2.7
-opencv-python==4.5.5.64
-opencv-contrib-python==4.5.5.64
+opencv-python==4.6.0.66
+opencv-contrib-python==4.6.0.66
 gevent==21.12.0
 django-allauth==0.51.0
 dj-rest-auth==2.2.4
 six==1.16.0
-requests==2.27.1
+requests==2.28.1
 beautifulsoup4==4.11.1
-redis==4.3.3
+redis==4.3.4
 websockets==10.3
-channels==3.0.4
+channels==3.0.5
 daphne==3.0.2
 channels-redis==3.4.0
-PyJWT==2.4.0
 asgiref==3.5.2
+# channels-redis requires aioredis v1 : https://github.com/django/channels_redis/issues/285
+aioredis==1.3.1
+PyJWT==2.4.0
 drf_yasg==1.20.0
 qrcode==7.3.1
 arabic-reshaper==2.1.3
