--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ djangorestframework-simplejwt==5.2.0
 django-cors-headers==3.13.0
 django-colorfield==0.7.1
 Pillow==9.2.0
-django-filter==22.1
+# Issue not filtering v22.1
+django-filter==21.1
 aiohttp==3.8.1
 celery==5.2.7
 opencv-python==4.6.0.66
@@ -22,7 +23,7 @@ redis==4.3.4
 websockets==10.3
 channels==3.0.5
 daphne==3.0.2
-channels-redis==3.4.0
+channels-redis==3.4.1
 asgiref==3.5.2
 # channels-redis requires aioredis v1 : https://github.com/django/channels_redis/issues/285
 aioredis==1.3.1
