chore : drf-yasg (swagger) removed

--- a/.env
+++ b/.env
@@ -137,12 +137,12 @@ ACCOUNT_EMAIL_VERIFICATION="none"
 ACCOUNT_MAX_EMAIL_ADDRESSES=1
 
 # SWAGGER_SETTINGS config
-SECURITY_DEFINITIONS_BASIC_TYPE="basic"
-SECURITY_DEFINITIONS_BEARER_TYPE="apiKey"
-SECURITY_DEFINITIONS_BEARER_NAME="Authorization"
-SECURITY_DEFINITIONS_BEARER_IN="header"
-SWAGGER_LOGIN_URL="/admin/login/"
-SWAGGER_LOGOUT_URL="/admin/logout/"
+#SECURITY_DEFINITIONS_BASIC_TYPE="basic"
+#SECURITY_DEFINITIONS_BEARER_TYPE="apiKey"
+#SECURITY_DEFINITIONS_BEARER_NAME="Authorization"
+#SECURITY_DEFINITIONS_BEARER_IN="header"
+#SWAGGER_LOGIN_URL="/admin/login/"
+#SWAGGER_LOGOUT_URL="/admin/logout/"
 
 # LOCAL
 CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
