--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ asgiref==3.5.2
 # channels-redis requires aioredis v1 : https://github.com/django/channels_redis/issues/285
 aioredis==1.3.1
 PyJWT==2.4.0
-drf_yasg==1.20.0
+# drf_yasg==1.20.0
 qrcode==7.3.1
 arabic-reshaper==2.1.3
 python-bidi==0.4.2
