--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ gunicorn==20.1.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 django-cors-headers==3.13.0
-django-colorfield==0.7.1
+django-colorfield==0.7.2
 Pillow==9.2.0
-# Issue not filtering v22.1
+# Not filtering in v22.1
 django-filter==21.1
 aiohttp==3.8.1
 celery==5.2.7
@@ -15,7 +15,7 @@ opencv-python==4.6.0.66
 opencv-contrib-python==4.6.0.66
 gevent==21.12.0
 django-allauth==0.51.0
-dj-rest-auth==2.2.4
+dj-rest-auth==2.2.5
 six==1.16.0
 requests==2.28.1
 beautifulsoup4==4.11.1
