fast-forward before adding raise validations

--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ QARYB_DB_HOST="localhost"
 AUTH_PASSWORD_VALIDATORS="django.contrib.auth.password_validation.MinimumLengthValidator"
 
 # Internationalization config
-LANGUAGE_CODE="en-us"
+LANGUAGE_CODE="fr-fr"
 TIME_ZONE="UTC"
 USE_I18N=True
 USE_L10N=True
@@ -111,7 +111,7 @@ MESSAGES_TO_LOAD=15
 # Facebook
 FACEBOOK_METHOD="oauth2"
 FACEBOOK_AUTH_TYPE="reauthenticate"
-FACEBOOK_LOCALE_FUNC="en_US"
+FACEBOOK_LOCALE_FUNC="fr_FR"
 FACEBOOK_COOKIE=True
 FACEBOOK_EXCHANGE_TOKEN=True
 FACEBOOK_VERIFIED_EMAIL=True
