--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 SECRET_KEY="ac@k!7n8s#f(dbbv92(ya_!68%tvi=x&o*k5fp72qt+vkua0=f"
 DEBUG=True
 API_IP="127.0.0.1"
-API_DOMAIN="api2.qaryb.com"
+API_DOMAIN="api.qaryb.com"
 
 # SSL secure proxy config
 SECURE_PROXY_SSL_HEADER_1="HTTP_X_FORWARDED_PROTO"
@@ -144,13 +144,12 @@ ACCOUNT_MAX_EMAIL_ADDRESSES=1
 #SWAGGER_LOGIN_URL="/admin/login/"
 #SWAGGER_LOGOUT_URL="/admin/logout/"
 
-# LOCAL
 CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
-API_URL=http://127.0.0.1:8000
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+
+# LOCAL
+#API_URL=http://127.0.0.1:8000
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
 # SERVER
-#CELERY_BROKER_URL="redis://127.0.0.1:6379/1"
-#CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/1"
-#API_URL='https://api2.qaryb.com'
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+API_URL='https://api.qaryb.com'
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
