fix: Qaryb_api to Qaryb_API

--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ SECURE_PROXY_SSL_HEADER_1="HTTP_X_FORWARDED_PROTO"
 SECURE_PROXY_SSL_HEADER_2="https"
 
 # Root url, asgi & wsgi config
-ROOT_URLCONF="Qaryb_api.urls"
-ASGI_APPLICATION="Qaryb_api.asgi.application"
-WSGI_APPLICATION="Qaryb_api.wsgi.application"
+ROOT_URLCONF="Qaryb_API.urls"
+ASGI_APPLICATION="Qaryb_API.asgi.application"
+WSGI_APPLICATION="Qaryb_API.wsgi.application"
 
 # Templates config
 TEMPLATES_BACKEND="django.template.backends.django.DjangoTemplates"
