--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ logs/
 logs/debug.log
 logs/ws_debug.log
 tests/__pycache__
-Qaryb_api/__pycache__
+Qaryb_API/__pycache__
 account/base/__pycache__
 account/migrations
 account/__pycache__
