feat: tout le maroc delivery field, deliveries from pk__in to name_fr__in

--- a/.env
+++ b/.env
@@ -148,8 +148,8 @@ CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
 # LOCAL
-API_URL=http://127.0.0.1:8000
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+#API_URL=http://127.0.0.1:8000
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
 # SERVER
-#API_URL='https://api.qaryb.com'
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+API_URL='https://api.qaryb.com'
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
