fix: bug unique_id delete temp offer, feat-back: token_verify endpoint, feat: google, facebook class pre-configs

--- a/.env
+++ b/.env
@@ -87,7 +87,7 @@ MAP_DOMAIN="127.0.0.1"
 # Simple_jwt config
 ACCESS_TOKEN_LIFETIME=60
 REFRESH_TOKEN_LIFETIME=365
-BLACKLIST_AFTER_ROTATION=True
+BLACKLIST_AFTER_ROTATION=False
 ROTATE_REFRESH_TOKENS=True
 
 # Redis config
@@ -150,6 +150,8 @@ CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 # LOCAL
 #API_URL=http://127.0.0.1:8000
 #ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+#FRONT_DOMAIN="http://localhost:3000"
 # SERVER
 API_URL='https://api.qaryb.com'
 ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+ FRONT_DOMAIN="https://dev.qaryb.com"
