--- a/.env
+++ b/.env
@@ -57,7 +57,7 @@ REST_FRAMEWORK_DEFAULT_PERMISSION_CLASSES="rest_framework.permissions.IsAuthenti
 REST_FRAMEWORK_DEFAULT_VERSIONING_CLASS="rest_framework.versioning.NamespaceVersioning"
 REST_FRAMEWORK_DEFAULT_VERSION="1.0.0"
 REST_FRAMEWORK_DEFAULT_PAGINATION_CLASS="rest_framework.pagination.PageNumberPagination"
-REST_FRAMEWORK_PAGE_SIZE=10
+REST_FRAMEWORK_PAGE_SIZE=5
 REST_FRAMEWORK_DEFAULT_RENDERER_CLASSES="rest_framework.renderers.JSONRenderer"
 REST_FRAMEWORK_DEFAULT_SCHEMA_CLASS="rest_framework.schemas.coreapi.AutoSchema"
 REST_FRAMEWORK_DEFAULT_FILTER_BACKENDS="django_filters.rest_framework.DjangoFilterBackend"
@@ -148,10 +148,10 @@ CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
 # LOCAL
-#API_URL=http://127.0.0.1:8000
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
-#FRONT_DOMAIN="http://localhost:3000"
+API_URL=http://127.0.0.1:8000
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+FRONT_DOMAIN="http://localhost:3000"
 # SERVER
-API_URL='https://api.qaryb.com'
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
-FRONT_DOMAIN="https://dev.qaryb.com"
+#API_URL='https://api.qaryb.com'
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+#FRONT_DOMAIN="https://dev.qaryb.com"
