--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Django==4.1.2
 python-decouple==3.6
-psycopg2-binary==2.9.4
+psycopg2-binary==2.9.5
 gunicorn==20.1.0
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.1
+djangorestframework-simplejwt==5.2.2
 django-cors-headers==3.13.0
 django-colorfield==0.7.2
 Pillow==9.2.0
@@ -19,13 +19,14 @@ six==1.16.0
 requests==2.28.1
 beautifulsoup4==4.11.1
 redis==4.3.4
-websockets==10.3
+websockets==10.4
 channels==4.0.0
 daphne==4.0.0
 channels-redis==4.0.0
 asgiref==3.5.2
 aioredis==2.0.1
-PyJWT==2.5.0
+PyJWT==2.6.0
+fpdf==1.7.2
 # drf_yasg==1.20.0
 qrcode==7.3.1
 arabic-reshaper==2.1.4
