fix: subscription migrations to gitignore, fix asgi.py settings

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ offers/base/__pycache__
 offers/migrations
 version/__pycache__
 version/migrations
+subscription/__pycache__
+subscription/migrations
