--- a/.env
+++ b/.env
@@ -153,10 +153,10 @@ CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
 # LOCAL
-#API_URL=http://127.0.0.1:8000
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
-#FRONT_DOMAIN="http://localhost:3000"
+API_URL=http://127.0.0.1:8000
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+FRONT_DOMAIN="http://localhost:3000"
 # SERVER
-API_URL='https://api.qaryb.com'
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
-FRONT_DOMAIN="https://dev.qaryb.com"
+#API_URL='https://api.qaryb.com'
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+#FRONT_DOMAIN="https://dev.qaryb.com"
