added authorized hosts to .env & settings

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 # Basic config
 SECRET_KEY="ac@k!7n8s#f(dbbv92(ya_!68%tvi=x&o*k5fp72qt+vkua0=f"
 DEBUG=True
-API_IP="127.0.0.1"
 API_DOMAIN="api.qaryb.com"
 
 # SSL secure proxy config
@@ -153,10 +152,14 @@ CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
 # LOCAL
+#API_IP="127.0.0.1"
 #API_URL=http://127.0.0.1:8000
 #ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
 #FRONT_DOMAIN="http://localhost:3000"
+#FRONT_IP="91.121.63.229"
 # SERVER
+API_IP="141.94.243.141"
 API_URL='https://api.qaryb.com'
 ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+FRONT_IP="91.121.63.229"
 FRONT_DOMAIN="https://dev.qaryb.com"
