revert mtrb subdomain

--- a/.env
+++ b/.env
@@ -162,5 +162,5 @@ API_IP="141.94.243.141"
 API_URL='https://api.qaryb.com'
 ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
 FRONT_IP="91.121.63.229"
-#FRONT_DOMAIN="https://dev.qaryb.com"
-FRONT_DOMAIN="https://mrtb.qaryb.com"
+FRONT_DOMAIN="https://dev.qaryb.com"
+#FRONT_DOMAIN="https://mrtb.qaryb.com"
