--- a/.env
+++ b/.env
@@ -95,8 +95,9 @@ REDIS_PORT="6379"
 REDIS_BACKEND="channels_redis.core.RedisChannelLayer"
 
 # Email config
-#EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
-EMAIL_USE_TLS=True
+EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
+EMAIL_USE_SSL=True
+EMAIL_USE_TLS=False
 DEFAULT_FROM_EMAIL="no-reply@qaryb.com"
 EMAIL_HOST="smtp.cakemail.dev"
 EMAIL_PORT="465"
