removed email backend - test 5

--- a/.env
+++ b/.env
@@ -96,12 +96,12 @@ REDIS_BACKEND="channels_redis.core.RedisChannelLayer"
 
 # Email config
 EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
-EMAIL_USE_TLS=True
-DEFAULT_FROM_EMAIL="no-reply@qaryb.com"
 EMAIL_HOST="smtp.cakemail.dev"
+EMAIL_USE_TLS=True
 EMAIL_PORT=587
 EMAIL_HOST_USER="n.hilale@qaryb.com"
 EMAIL_HOST_PASSWORD="Nawfel12345"
+DEFAULT_FROM_EMAIL="order@qaryb.com"
 #EMAIL_HOST="smtp.gmail.com"
 #EMAIL_HOST_USER="no-reply@qaryb.com"
 #EMAIL_HOST_PASSWORD="24YAqua09"
