test sending server email - test 6

--- a/.env
+++ b/.env
@@ -95,7 +95,7 @@ REDIS_PORT="6379"
 REDIS_BACKEND="channels_redis.core.RedisChannelLayer"
 
 # Email config
-EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
+#EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
 EMAIL_HOST="smtp.cakemail.dev"
 EMAIL_USE_TLS=True
 EMAIL_PORT=587
