test sending server email - test 10

--- a/.env
+++ b/.env
@@ -97,9 +97,10 @@ REDIS_BACKEND="channels_redis.core.RedisChannelLayer"
 # Email config
 EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
 EMAIL_HOST="smtp.cakemail.dev"
-EMAIL_USE_TLS=False
-EMAIL_USE_SSL=True
-EMAIL_PORT=465
+EMAIL_USE_TLS=True
+#EMAIL_USE_SSL=True
+#EMAIL_PORT=465
+EMAIL_PORT=587
 EMAIL_HOST_USER="n.hilale@qaryb.com"
 EMAIL_HOST_PASSWORD="Nawfel12345"
 DEFAULT_FROM_EMAIL="no-reply@qaryb.com"
