--- a/.env
+++ b/.env
@@ -96,15 +96,17 @@ REDIS_BACKEND="channels_redis.core.RedisChannelLayer"
 
 # Email config
 EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
-EMAIL_HOST="smtp.cakemail.dev"
+#EMAIL_HOST="smtp.cakemail.dev"
 EMAIL_USE_TLS=True
+#EMAIL_USE_SSL=False
+#EMAIL_PORT=465
 EMAIL_PORT=587
-EMAIL_HOST_USER="n.hilale@qaryb.com"
-EMAIL_HOST_PASSWORD="Nawfel12345"
+#EMAIL_HOST_USER="n.hilale@qaryb.com"
+#EMAIL_HOST_PASSWORD="Nawfel12345"
 DEFAULT_FROM_EMAIL="no-reply@qaryb.com"
-#EMAIL_HOST="smtp.gmail.com"
-#EMAIL_HOST_USER="no-reply@qaryb.com"
-#EMAIL_HOST_PASSWORD="24YAqua09"
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_HOST_USER="no-reply@qaryb.com"
+EMAIL_HOST_PASSWORD="24YAqua09"
 
 #EMAIL_USE_SSL=True
 #EMAIL_PORT=465
@@ -153,14 +155,14 @@ CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
 # LOCAL
-#API_IP="127.0.0.1"
-#API_URL=http://127.0.0.1:8000
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
-#FRONT_IP="91.121.63.229"
-#FRONT_DOMAIN="http://localhost:3000"
-# SERVER
-API_IP="141.94.243.141"
-API_URL='https://api.qaryb.com'
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+API_IP="127.0.0.1"
+API_URL=http://127.0.0.1:8000
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
 FRONT_IP="91.121.63.229"
-FRONT_DOMAIN="https://dev.qaryb.com"
+FRONT_DOMAIN="http://localhost:3000"
+# SERVER
+#API_IP="141.94.243.141"
+#API_URL='https://api.qaryb.com'
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+#FRONT_IP="91.121.63.229"
+#FRONT_DOMAIN="https://dev.qaryb.com"
