--- a/.env
+++ b/.env
@@ -96,17 +96,15 @@ REDIS_BACKEND="channels_redis.core.RedisChannelLayer"
 
 # Email config
 EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
-#EMAIL_HOST="smtp.cakemail.dev"
+EMAIL_HOST="smtp.cakemail.dev"
+# EMAIL_HOST="smtp.gmail.com"
 EMAIL_USE_TLS=True
-#EMAIL_USE_SSL=False
-#EMAIL_PORT=465
 EMAIL_PORT=587
-#EMAIL_HOST_USER="n.hilale@qaryb.com"
-#EMAIL_HOST_PASSWORD="Nawfel12345"
+EMAIL_HOST_USER="n.hilale@qaryb.com"
+EMAIL_HOST_PASSWORD="Nawfel12345"
 DEFAULT_FROM_EMAIL="no-reply@qaryb.com"
-EMAIL_HOST="smtp.gmail.com"
-EMAIL_HOST_USER="no-reply@qaryb.com"
-EMAIL_HOST_PASSWORD="24YAqua09"
+# EMAIL_HOST_USER="no-reply@qaryb.com"
+# EMAIL_HOST_PASSWORD="24YAqua09"
 
 #EMAIL_USE_SSL=True
 #EMAIL_PORT=465
