--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ dj-rest-auth==2.2.5
 six==1.16.0
 requests==2.28.1
 beautifulsoup4==4.11.1
-redis==4.3.4
+redis==4.3.5
 websockets==10.4
 channels==4.0.0
 daphne==4.0.0
@@ -32,4 +32,4 @@ fpdf==1.7.2
 qrcode==7.3.1
 arabic-reshaper==2.1.4
 python-bidi==0.4.2
-numpy~=1.23.4
+numpy==1.23.5
