--- a/.gitignore
+++ b/.gitignore
@@ -11,45 +11,45 @@ logs/ws_debug.log
 tests/__pycache__
 Qaryb_API/__pycache__
 account/base/__pycache__
-account/migrations
-account/migrations/__pycache__
+#account/migrations
+#account/migrations/__pycache__
 account/__pycache__
 shop/__pycache__
 shop/base/__pycache__
-shop/migrations
-shop/migrations/__pycache__
+#shop/migrations
+#shop/migrations/__pycache__
 cart/base/__pycache__
-cart/migrations
-cart/migrations/__pycache__
+#cart/migrations
+#cart/migrations/__pycache__
 cart/__pycache__
 chat/base/__pycache__
-chat/migrations
-chat/migrations/__pycache__
+#chat/migrations
+#chat/migrations/__pycache__
 chat/__pycache__
 order/base/__pycache__
-order/migrations
-order/migrations/__pycache__
+#order/migrations
+#order/migrations/__pycache__
 order/__pycache__
 places/base/__pycache__
-places/migrations
-places/migrations/__pycache__
+#places/migrations
+#places/migrations/__pycache__
 places/__pycache__
 ratings/base/__pycache__
-ratings/migrations
-ratings/migrations/__pycache__
+#ratings/migrations
+#ratings/migrations/__pycache__
 ratings/__pycache__
 offers/__pycache__
 offers/base/__pycache__
-offers/migrations
-offers/migrations/__pycache__
+#offers/migrations
+#offers/migrations/__pycache__
 subscription/__pycache__
 subscription/base/__pycache__
-subscription/migrations
-subscription/migrations/__pycache__
+#subscription/migrations
+#subscription/migrations/__pycache__
 notifications/__pycache__
 notifications/base/__pycache__
-notifications/migrations
-notifications/migrations/__pycache__
+#notifications/migrations
+#notifications/migrations/__pycache__
 version/__pycache__
-version/migrations
-version/migrations/__pycache__
+#version/migrations
+#version/migrations/__pycache__
