--- a/.env
+++ b/.env
@@ -160,7 +160,7 @@ API_IP="141.94.243.141"
 API_URL='https://api.qaryb.com'
 ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
 FRONT_IP="91.121.63.229"
-FRONT_DOMAIN="https://dev.qaryb.com"
+FRONT_DOMAIN="https://qaryb.com"
 EMAIL_HOST_USER="n.hilale@qaryb.com"
 EMAIL_HOST_PASSWORD="Nawfel12345"
 EMAIL_HOST="smtp.cakemail.dev"
