fixing cors origin - 2

--- a/.env
+++ b/.env
@@ -159,7 +159,7 @@ CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 API_IP="141.94.243.141"
 API_URL='https://api.qaryb.com'
 ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
-FRONT_IP="91.121.63.229"
+#FRONT_IP="91.121.63.229"
 FRONT_DOMAIN="https://qaryb.com"
 EMAIL_HOST_USER="n.hilale@qaryb.com"
 EMAIL_HOST_PASSWORD="Nawfel12345"
