--- a/.env
+++ b/.env
@@ -155,10 +155,10 @@ CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 #EMAIL_HOST_PASSWORD="24YAqua09"
 #EMAIL_HOST="smtp.gmail.com"
 # SERVER
-API_IP="141.94.243.141"
-API_URL='https://api.qaryb.com'
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
-FRONT_DOMAIN="https://qaryb.com"
-EMAIL_HOST_USER="n.hilale@qaryb.com"
-EMAIL_HOST_PASSWORD="Nawfel12345"
-EMAIL_HOST="smtp.cakemail.dev"
+#API_IP="141.94.243.141"
+#API_URL='https://api.qaryb.com'
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+#FRONT_DOMAIN="https://qaryb.com"
+#EMAIL_HOST_USER="n.hilale@qaryb.com"
+#EMAIL_HOST_PASSWORD="Nawfel12345"
+#EMAIL_HOST="smtp.cakemail.dev"
