fix - offers post - put - images with thumbnails cropped

--- a/.env
+++ b/.env
@@ -146,6 +146,7 @@ ACCOUNT_MAX_EMAIL_ADDRESSES=1
 CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
+# celery --app=Qaryb_API.celery_conf worker --loglevel=debug --concurrency=4 -E -P gevent
 # LOCAL
 #API_IP="127.0.0.1"
 #API_URL=http://127.0.0.1:8000
