added notifications for cancel/accept order - corrected cancel endpoint

--- a/.env
+++ b/.env
@@ -148,18 +148,18 @@ CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
 # celery --app=Qaryb_API.celery_conf worker --loglevel=debug --concurrency=4 -E -P gevent
 # LOCAL
-#API_IP="127.0.0.1"
-#API_URL=http://127.0.0.1:8000
-#ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
-#FRONT_DOMAIN="http://localhost:3000"
-#EMAIL_HOST_USER="no-reply@qaryb.com"
-#EMAIL_HOST_PASSWORD="24YAqua09"
-#EMAIL_HOST="smtp.gmail.com"
+API_IP="127.0.0.1"
+API_URL=http://127.0.0.1:8000
+ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
+FRONT_DOMAIN="http://localhost:3000"
+EMAIL_HOST_USER="no-reply@qaryb.com"
+EMAIL_HOST_PASSWORD="24YAqua09"
+EMAIL_HOST="smtp.gmail.com"
 # SERVER
-API_IP="141.94.243.141"
-API_URL='https://api.qaryb.com'
-ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
-FRONT_DOMAIN="https://qaryb.com"
-EMAIL_HOST_USER="n.hilale@qaryb.com"
-EMAIL_HOST_PASSWORD="Nawfel12345"
-EMAIL_HOST="smtp.cakemail.dev"
+#API_IP="141.94.243.141"
+#API_URL='https://api.qaryb.com'
+#ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
+#FRONT_DOMAIN="https://qaryb.com"
+#EMAIL_HOST_USER="n.hilale@qaryb.com"
+#EMAIL_HOST_PASSWORD="Nawfel12345"
+#EMAIL_HOST="smtp.cakemail.dev"
