--- a/.env
+++ b/.env
@@ -143,6 +143,8 @@ ACCOUNT_MAX_EMAIL_ADDRESSES=1
 #SWAGGER_LOGIN_URL="/admin/login/"
 #SWAGGER_LOGOUT_URL="/admin/logout/"
 
+GOOGLE_SPREADSHEET_ID="1e1gA_7D23B_3Jje15kJHkxxPwLK9v7lztSL8ZZ98O8o"
+
 CELERY_BROKER_URL="redis://127.0.0.1:6379/0"
 CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
