--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ celery==5.2.7
 opencv-python==4.7.0.68
 opencv-contrib-python==4.7.0.68
 gevent==22.10.2
-django-allauth==0.52.0
-dj-rest-auth==2.2.7
+# Error google login
+django-allauth==0.51.0
+dj-rest-auth==2.2.5
 six==1.16.0
 requests==2.28.2
 beautifulsoup4==4.11.1
@@ -35,3 +36,6 @@ python-bidi==0.4.2
 numpy==1.24.1
 pdfkit~=1.0.0
 django-ckeditor~=6.5.1
+google-api-python-client==2.73.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.8.0
