--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ account/base/__pycache__
 #account/migrations
 #account/migrations/__pycache__
 account/__pycache__
+facebook_events/__pycache__
+facebook_events/base/__pycache__
 shop/__pycache__
 shop/base/__pycache__
 #shop/migrations
