--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==4.1.5
+Django==4.1.6
 python-decouple==3.7
 psycopg2-binary==2.9.5
 gunicorn==20.1.0
@@ -19,7 +19,7 @@ django-allauth==0.51.0
 dj-rest-auth==2.2.5
 six==1.16.0
 requests==2.28.2
-beautifulsoup4==4.11.1
+beautifulsoup4==4.11.2
 redis==4.4.2
 websockets==10.4
 channels==4.0.0
@@ -30,12 +30,13 @@ aioredis==2.0.1
 PyJWT==2.6.0
 fpdf==1.7.2
 # drf_yasg==1.20.0
-qrcode==7.3.1
+qrcode==7.4.2
 arabic-reshaper==3.0.0
 python-bidi==0.4.2
-numpy==1.24.1
+numpy==1.24.2
 pdfkit~=1.0.0
 django-ckeditor~=6.5.1
-google-api-python-client==2.74.0
+google-api-python-client==2.76.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.8.0
+facebook-business==16.0.0
