--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # Basic config
 SECRET_KEY="ac@k!7n8s#f(dbbv92(ya_!68%tvi=x&o*k5fp72qt+vkua0=f"
-DEBUG=True
 API_DOMAIN="api.qaryb.com"
 
 # SSL secure proxy config
@@ -150,6 +149,7 @@ CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 
 # celery --app=Qaryb_API.celery_conf worker --loglevel=debug --concurrency=4 -E -P gevent
 # LOCAL
+#DEBUG=True
 #API_IP="127.0.0.1"
 #API_URL=http://127.0.0.1:8000
 #ACCOUNT_DEFAULT_HTTP_PROTOCOL='http'
@@ -158,6 +158,7 @@ CELERY_RESULT_BACKEND="redis://127.0.0.1:6379/0"
 #EMAIL_HOST_PASSWORD="24YAqua09"
 #EMAIL_HOST="smtp.gmail.com"
 # SERVER
+DEBUG=False
 API_IP="141.94.243.141"
 API_URL='https://api.qaryb.com'
 ACCOUNT_DEFAULT_HTTP_PROTOCOL='https'
