--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,42 @@
-Django==4.1.7
+Django==4.2.1
 python-decouple==3.8
-psycopg2-binary==2.9.5
+psycopg2-binary==2.9.6
 gunicorn==20.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 django-cors-headers==3.14.0
 django-colorfield==0.8.0
-Pillow==9.4.0
+Pillow==9.5.0
 olefile==0.46
-django-filter==22.1
+django-filter==23.2
 aiohttp==3.8.4
 celery==5.2.7
 opencv-python==4.7.0.72
 opencv-contrib-python==4.7.0.72
 gevent==22.10.2
 # Error google login
-django-allauth==0.51.0
-dj-rest-auth==2.2.5
+django-allauth==0.54.0
+dj-rest-auth==4.0.0
 six==1.16.0
-requests==2.28.2
-beautifulsoup4==4.11.2
-redis==4.5.1
-websockets==10.4
+requests==2.30.0
+beautifulsoup4==4.12.2
+redis==4.5.5
+websockets==11.0.3
 channels==4.0.0
 daphne==4.0.0
-channels-redis==4.0.0
+channels-redis==4.1.0
 asgiref==3.6.0
 aioredis==2.0.1
-PyJWT==2.6.0
+PyJWT==2.7.0
 fpdf==1.7.2
 # drf_yasg==1.20.0
 qrcode~=7.4.2
 arabic-reshaper~=3.0.0
 python-bidi~=0.4.2
-numpy~=1.24.2
+numpy==1.24.3
 pdfkit~=1.0.0
 django-ckeditor~=6.5.1
-google-api-python-client~=2.80.0
+google-api-python-client==2.86.0
 google-auth-httplib2~=0.1.0
 google-auth-oauthlib~=1.0.0
 facebook-business~=16.0.0
