--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,42 @@
-Django==4.2.2
+Django==4.2.5
 python-decouple==3.8
-psycopg2-binary==2.9.6
-gunicorn==20.1.0
+psycopg2-binary==2.9.7
+gunicorn==21.2.0
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-django-cors-headers==4.1.0
-django-colorfield==0.9.0
-Pillow==9.5.0
+djangorestframework-simplejwt==5.3.0
+django-cors-headers==4.2.0
+django-colorfield==0.10.1
+Pillow==10.0.1
 olefile==0.46
-django-filter==23.2
-aiohttp==3.8.4
-celery==5.3.1
-opencv-python==4.7.0.72
-opencv-contrib-python==4.7.0.72
-gevent==22.10.2
+django-filter==23.3
+aiohttp==3.8.5
+celery==5.3.4
+opencv-python==4.8.0.76
+opencv-contrib-python==4.8.0.76
+gevent==23.9.1
 # Error google login
-django-allauth==0.54.0
-dj-rest-auth==4.0.1
+django-allauth==0.56.1
+dj-rest-auth==5.0.1
 six==1.16.0
 requests==2.31.0
 beautifulsoup4==4.12.2
-redis==4.6.0
+redis==5.0.0
 websockets==11.0.3
 channels==4.0.0
 daphne==4.0.0
 channels-redis==4.1.0
 asgiref==3.7.2
 aioredis==2.0.1
-PyJWT==2.7.0
+PyJWT==2.8.0
 fpdf==1.7.2
 # drf_yasg==1.20.0
 qrcode~=7.4.2
 arabic-reshaper~=3.0.0
 python-bidi~=0.4.2
-numpy==1.25.0
+numpy==1.26.0
 pdfkit~=1.0.0
-django-ckeditor~=6.6.1
-google-api-python-client==2.90.0
+django-ckeditor==6.7.0
+google-api-python-client==2.100.0
 google-auth-httplib2~=0.1.0
-google-auth-oauthlib~=1.0.0
-facebook-business~=17.0.2
+google-auth-oauthlib~=1.1.0
+facebook-business~=18.0.0
